--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Better Badges",
-  "description": "Adds cool animations to discord's badges",
-  "version": "1.2.9",
-  "author": "mr_miner#6969",
+  "description": "Adds cool animations to discord's badges to make them look better",
+  "version": "1.3.0",
+  "author": "tinnyterr#0000",
   "theme": "theme.scss",
   "license": "MIT",
   "themesettings": "./theme-settings.json"
